issue ECOSCOM-280 - The approvers delete button is not aligned when sending document for approval

--- a/ecos-base-core-share/source/web/citeck/components/form/controls/route.css
+++ b/ecos-base-core-share/source/web/citeck/components/form/controls/route.css
@@ -17,6 +17,10 @@
   text-align: right;
 }
 
+.form-field.route table.stages tbody.stage tr td.stage-participants {
+  padding: 0;
+}
+
 .form-field.route table.stages .stage select {
   width: 100%;
 }
