--- a/idocs-share/source/web/themes/citeckTheme/yui/assets/skin.css
+++ b/idocs-share/source/web/themes/citeckTheme/yui/assets/skin.css
@@ -5095,7 +5095,7 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-citeckTheme td.value-col .form-field .yui-button button {
    color: #1c55da;
    font-weight: 900;
-   padding: 3px 10px;
+   padding: 4px 10px;
    border: 2px solid #1c55da;
 }
 
